Fixed image not showing on mobile screen

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
 
 img {
   width: 100%;
-  height: 100%;
 }
 
 input {
@@ -73,7 +72,6 @@ fieldset {
     'image  form'
     'image  login';
 }
-
 
 .image {
   grid-area: image;
@@ -161,14 +159,11 @@ a:hover {
   color: red;
 }
 
-@media (max-width: 800px)  {
-  
-} 
 
 @media (max-width: 450px) {
   .grid-container {
-      display: flex;
-      flex-direction: column;
+    display: flex;
+    flex-direction: column;
   }
 
   .intro {
@@ -178,36 +173,30 @@ a:hover {
     padding: 1em;
   }
 
-  img {
-    width: 100vw;
-    height: 55%;
-}
+  .signup {
+    display: flex;
+    background-color: #d4a373;
+    color: #161619;
+    padding-bottom: 2em;
+    flex-direction: column;
+    align-items: center;
+  }
 
-.signup {
-  display: flex;
-  background-color: #d4a373;
-  color: #161619;
-  padding-bottom: 2em;
-  flex-direction: column;
-  align-items: center;
-}
+  .input-el {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+  }
 
-.input-el {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0;
-}
+  .login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+  }
 
-.login {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1em;
-}
-
-input {
-  width: 80vw;
-}
-
+  input {
+    width: 80vw;
+  }
 }
